Include map in indicator page

--- a/.env.default
+++ b/.env.default
@@ -1,13 +1,7 @@
-DB_CONNECTION_STRING=
-SESSION_SECRET=
-LOGS_SECRET=
-FACEBOOK_ID=
-FACEBOOK_SECRET=
-GOOGLE_ID=
-GOOGLE_SECRET=
-TWITTER_KEY=
-TWITTER_SECRET=
-PORT=4000
+PORT=
 NODE_ENV=
 KENYA_API=
 KENYA_API_KEY=
+
+BASEMAP_TILE_URL=
+BASEMAP_LABEL_URL=
