--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "glob": "7.1.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonapi-serializer": "^3.5.3",
+    "leaflet": "^1.0.2",
     "lodash": "https://registry.npmjs.org/lodash/-/lodash-4.17.4.tgz",
     "lusca": "^1.4.1",
     "next": "^3.0.0-beta6",
