--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
     "comma-dangle": ["error", "never"],
     "prefer-stateless-function": [0, { "ignorePureComponents": true }],
     "arrow-body-style": 0,
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "class-methods-use-this": 0
   }
 }
