--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,7 @@
     "prefer-stateless-function": [0, { "ignorePureComponents": true }],
     "arrow-body-style": 0,
     "no-underscore-dangle": 0,
-    "class-methods-use-this": 0
+    "class-methods-use-this": 0,
+    "react/no-array-index-key": 0
   }
 }
