--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^4.4.6",
     "react-select": "^1.0.0-rc.5",
+    "react-sortable-hoc": "^0.6.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^5.0.1",
