--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^4.4.6",
     "react-select": "^1.0.0-rc.5",
     "react-sortable-hoc": "^0.6.5",
+    "react-transition-group": "^2.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.1",
