--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
     "leaflet": "^1.0.2",
     "lodash": "https://registry.npmjs.org/lodash/-/lodash-4.17.4.tgz",
     "lusca": "^1.4.1",
-    "next": "^3.0.0-beta6",
+    "next": "^3.0.1-beta",
     "next-redux-wrapper": "^1.1.2",
-    "next-routes": "^1.0.27",
+    "next-routes": "^1.0.40",
     "node-sass": "^4.5.0",
-    "nodemailer": "^2.7.0",
     "normalize.css": "^7.0.0",
     "now-logs": "0.0.7",
     "orm": "^3.2.3",
@@ -69,7 +68,6 @@
     "eslint-plugin-import": "https://registry.npmjs.org/eslint-plugin-import/-/eslint-plugin-import-2.2.0.tgz",
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
-    "postcss-easy-import": "^2.0.0",
     "why-did-you-update": "0.0.8"
   },
   "scripts": {
