--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "foundation-sites": "^6.3.1",
+    "fuse.js": "^3.0.5",
     "glob": "7.1.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonapi-serializer": "^3.5.3",
@@ -45,6 +46,7 @@
     "react-redux": "^4.4.6",
     "react-select": "^1.0.0-rc.5",
     "react-sortable-hoc": "^0.6.5",
+    "react-tether": "^0.5.7",
     "react-toggle-switch": "^2.1.4",
     "react-transition-group": "^1.2.0",
     "redux": "^3.6.0",
