--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "main": "index.js",
   "dependencies": {
     "autoprefixer": "^6.7.6",
+    "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.22.1.tgz",
     "babel-plugin-module-resolver": "https://registry.npmjs.org/babel-plugin-module-resolver/-/babel-plugin-module-resolver-2.6.2.tgz",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
@@ -29,7 +31,7 @@
     "next": "^3.0.1-beta",
     "next-redux-wrapper": "^1.1.2",
     "next-routes": "^1.0.40",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "now-logs": "0.0.7",
     "orm": "^3.2.3",
@@ -59,9 +61,7 @@
     "webpack": "https://registry.npmjs.org/webpack/-/webpack-2.4.0.tgz"
   },
   "devDependencies": {
-    "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.22.1.tgz",
     "babel-eslint": "^7.2.3",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-config-vizzuality": "1.0.3",
@@ -74,10 +74,11 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development node index.js",
+    "test": "eslint .",
     "build": "next build",
     "start": "node index.js"
   },
   "engines": {
-    "node": "7.x.x"
+    "node": "8.1.x"
   }
 }
