--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-tether": "^0.5.7",
     "react-toggle-switch": "^2.1.4",
     "react-transition-group": "^1.2.0",
+    "recharts": "^1.0.0-alpha.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.1",
