--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fuse.js": "^3.0.5",
     "glob": "7.1.1",
     "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.1.4",
     "jsonapi-serializer": "^3.5.3",
     "leaflet": "^1.0.2",
     "lodash": "https://registry.npmjs.org/lodash/-/lodash-4.17.4.tgz",
@@ -46,6 +47,7 @@
     "raw-loader": "^0.5.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-dropzone": "^3.13.3",
     "react-redux": "^4.4.6",
     "react-select": "^1.0.0-rc.5",
     "react-sortable-hoc": "^0.6.5",
