--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: "2"
 services:
+  redis:
+    image: redis
   app:
     command: "yarn start"
     build:
@@ -7,8 +9,12 @@ services:
       dockerfile: Dockerfile
     env_file: .env
     environment:
+      - PORT=3000
       - NODE_ENV=production
+      - REDIS_URL=redis://redis:6379
     ports:
       - "3000:3000"
     restart: always
     container_name: kenya_dashboard
+    depends_on:
+      - redis
