--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "babel-plugin-wrap-in-js": "^1.1.1",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
+    "connect-redis": "^3.3.0",
     "cookie-parser": "^1.4.3",
-    "cookie-session": "^2.0.0-beta.2",
     "dotenv": "^4.0.0",
     "eventemitter3": "^2.0.3",
     "express": "^4.14.0",
@@ -43,6 +43,7 @@
     "passport-twitter": "^1.0.4",
     "postcss-easy-import": "2.0.0",
     "postcss-loader": "^1.3.3",
+    "postcss-middleware": "^1.1.3",
     "prop-types": "https://registry.npmjs.org/prop-types/-/prop-types-15.5.7.tgz",
     "raw-loader": "^0.5.1",
     "react": "^15.5.4",
@@ -54,6 +55,7 @@
     "react-toggle-switch": "^2.1.4",
     "react-transition-group": "^1.2.0",
     "recharts": "^1.0.0-alpha.2",
+    "redis": "^2.8.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.1",
