--- a/package.json
+++ b/package.json
@@ -7,70 +7,69 @@
   "repository": "https://github.com/iaincollins/nextjs-starter.git",
   "main": "index.js",
   "dependencies": {
-    "autoprefixer": "^6.7.6",
-    "babel-core": "https://registry.npmjs.org/babel-core/-/babel-core-6.22.1.tgz",
-    "babel-plugin-module-resolver": "https://registry.npmjs.org/babel-plugin-module-resolver/-/babel-plugin-module-resolver-2.6.2.tgz",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-wrap-in-js": "^1.1.1",
-    "body-parser": "^1.15.2",
-    "classnames": "^2.2.5",
-    "connect-redis": "^3.3.0",
-    "cookie-parser": "^1.4.3",
-    "dotenv": "^4.0.0",
-    "eventemitter3": "^2.0.3",
-    "express": "^4.14.0",
-    "express-session": "^1.14.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "foundation-sites": "^6.3.1",
-    "fuse.js": "^3.0.5",
+    "autoprefixer": "6.7.6",
+    "babel-core": "6.22.1",
+    "babel-plugin-module-resolver": "2.6.2",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-wrap-in-js": "1.1.1",
+    "body-parser": "1.15.2",
+    "classnames": "2.2.5",
+    "connect-redis": "3.3.0",
+    "cookie-parser": "1.4.3",
+    "dotenv": "4.0.0",
+    "eventemitter3": "2.0.3",
+    "express": "4.14.0",
+    "express-session": "1.14.2",
+    "extract-text-webpack-plugin": "2.1.0",
+    "foundation-sites": "6.3.1",
+    "fuse.js": "3.0.5",
     "glob": "7.1.1",
-    "isomorphic-fetch": "^2.2.1",
-    "js-cookie": "^2.1.4",
-    "jsonapi-serializer": "^3.5.3",
-    "leaflet": "^1.0.2",
-    "lodash": "https://registry.npmjs.org/lodash/-/lodash-4.17.4.tgz",
-    "lusca": "^1.4.1",
-    "next": "^3.0.1-beta",
-    "next-redux-wrapper": "^1.1.2",
-    "next-routes": "^1.0.40",
-    "node-sass": "^4.5.3",
-    "normalize.css": "^7.0.0",
+    "isomorphic-fetch": "2.2.1",
+    "js-cookie": "2.1.4",
+    "jsonapi-serializer": "3.5.3",
+    "leaflet": "1.0.2",
+    "lodash": "4.17.4",
+    "lusca": "1.4.1",
+    "next": "3.0.3",
+    "next-redux-wrapper": "1.1.2",
+    "next-routes": "1.0.40",
+    "node-sass": "4.5.3",
+    "normalize.css": "7.0.0",
     "now-logs": "0.0.7",
-    "orm": "^3.2.3",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
-    "passport-google-oauth": "^1.0.0",
-    "passport-twitter": "^1.0.4",
+    "orm": "3.2.3",
+    "passport": "0.3.2",
+    "passport-facebook": "2.1.1",
+    "passport-google-oauth": "1.0.0",
+    "passport-twitter": "1.0.4",
     "postcss-easy-import": "2.0.0",
-    "postcss-loader": "^1.3.3",
-    "postcss-middleware": "^1.1.3",
-    "prop-types": "https://registry.npmjs.org/prop-types/-/prop-types-15.5.7.tgz",
-    "raw-loader": "^0.5.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-redux": "^4.4.6",
-    "react-select": "^1.0.0-rc.5",
-    "react-sortable-hoc": "^0.6.5",
-    "react-tether": "^0.5.7",
-    "react-toggle-switch": "^2.1.4",
-    "react-transition-group": "^1.2.0",
-    "recharts": "^1.0.0-alpha.2",
-    "redis": "^2.8.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "reselect": "^3.0.1",
-    "sass-loader": "^5.0.1",
-    "session-file-store": "^1.0.0",
-    "sqlite3": "^3.1.8",
-    "uuid": "^3.0.1",
-    "webpack": "https://registry.npmjs.org/webpack/-/webpack-2.4.0.tgz"
+    "postcss-loader": "1.3.3",
+    "postcss-middleware": "1.1.3",
+    "prop-types": "15.5.7",
+    "raw-loader": "0.5.1",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "react-redux": "4.4.6",
+    "react-select": "1.0.0-rc.5",
+    "react-sortable-hoc": "0.6.5",
+    "react-tether": "0.5.7",
+    "react-toggle-switch": "2.1.4",
+    "react-transition-group": "1.2.0",
+    "recharts": "1.0.0-alpha.2",
+    "redis": "2.8.0",
+    "redux": "3.6.0",
+    "redux-thunk": "2.1.0",
+    "reselect": "3.0.1",
+    "sass-loader": "5.0.1",
+    "session-file-store": "1.0.0",
+    "sqlite3": "3.1.8",
+    "uuid": "3.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^3.19.0",
+    "babel-eslint": "7.2.3",
+    "eslint": "3.19.0",
     "eslint-config-vizzuality": "1.0.3",
-    "eslint-import-resolver-babel-module": "^3.0.0",
-    "eslint-plugin-babel": "^4.1.1",
+    "eslint-import-resolver-babel-module": "3.0.0",
+    "eslint-plugin-babel": "4.1.1",
     "why-did-you-update": "0.0.8"
   },
   "scripts": {
