--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "passport-facebook": "2.1.1",
     "passport-google-oauth": "1.0.0",
     "passport-twitter": "1.0.4",
+    "pikaday": "1.6.1",
     "postcss-easy-import": "2.0.0",
     "postcss-loader": "1.3.3",
     "postcss-middleware": "1.1.3",
     "prop-types": "15.5.7",
     "raw-loader": "0.5.1",
     "react": "15.5.4",
+    "react-bootstrap-daterangepicker": "3.4.0",
     "react-dom": "15.5.4",
     "react-redux": "4.4.6",
     "react-select": "1.0.0-rc.5",
