--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-bootstrap-daterangepicker": "3.4.0",
     "react-dom": "15.5.4",
     "react-redux": "4.4.6",
+    "react-responsive": "^1.3.4",
     "react-select": "1.0.0-rc.5",
     "react-sortable-hoc": "0.6.5",
     "react-tether": "0.5.7",
