--- a/package.json
+++ b/package.json
@@ -31,16 +31,14 @@
     "lodash": "4.17.4",
     "lusca": "1.4.1",
     "next": "3.0.3",
-    "next-redux-wrapper": "1.1.2",
+    "next-redux-wrapper": "1.3.2",
     "next-routes": "1.0.40",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "now-logs": "0.0.7",
     "orm": "3.2.3",
     "passport": "0.3.2",
-    "passport-facebook": "2.1.1",
-    "passport-google-oauth": "1.0.0",
-    "passport-twitter": "1.0.4",
+    "passport-local": "^1.0.0",
     "pikaday": "1.6.1",
     "postcss-easy-import": "2.0.0",
     "postcss-loader": "1.3.3",
@@ -50,7 +48,7 @@
     "react": "15.5.4",
     "react-bootstrap-daterangepicker": "3.4.0",
     "react-dom": "15.5.4",
-    "react-redux": "4.4.6",
+    "react-redux": "5.0.5",
     "react-select": "1.0.0-rc.5",
     "react-sortable-hoc": "0.6.5",
     "react-tether": "0.5.7",
@@ -64,6 +62,7 @@
     "sass-loader": "5.0.1",
     "session-file-store": "1.0.0",
     "sqlite3": "3.1.8",
+    "superagent": "^3.6.0",
     "uuid": "3.0.1"
   },
   "devDependencies": {
