--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-redis": "3.3.0",
     "cookie-parser": "1.4.3",
     "dotenv": "4.0.0",
+    "es6-promise": "^4.1.1",
     "eventemitter3": "2.0.3",
     "express": "4.14.0",
     "express-session": "1.14.2",
