--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-loader": "1.3.3",
     "postcss-middleware": "1.1.3",
     "prop-types": "15.5.7",
+    "puppeteer": "^0.10.1",
     "raw-loader": "0.5.1",
     "react": "15.5.4",
     "react-bootstrap-daterangepicker": "3.4.0",
@@ -65,6 +66,7 @@
     "session-file-store": "1.0.0",
     "sqlite3": "3.1.8",
     "superagent": "^3.6.0",
+    "tmp": "^0.0.33",
     "uuid": "3.0.1"
   },
   "devDependencies": {
