--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "15.5.4",
     "react-bootstrap-daterangepicker": "3.4.0",
     "react-dom": "15.5.4",
+    "react-element-resize": "^0.2.1",
     "react-redux": "4.4.6",
     "react-responsive": "^1.3.4",
     "react-select": "1.0.0-rc.5",
@@ -62,6 +63,7 @@
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
     "reselect": "3.0.1",
+    "resize-sensor--react": "^1.0.2",
     "sass-loader": "5.0.1",
     "session-file-store": "1.0.0",
     "sqlite3": "3.1.8",
