--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "prop-types": "15.5.7",
     "puppeteer": "^0.10.1",
     "raw-loader": "0.5.1",
-    "react": "15.5.4",
+    "react": "15.6.1",
     "react-bootstrap-daterangepicker": "3.4.0",
-    "react-dom": "15.5.4",
+    "react-dom": "15.6.1",
     "react-redux": "5.0.5",
     "react-responsive": "^1.3.4",
     "react-select": "1.0.0-rc.5",
@@ -60,6 +60,7 @@
     "recharts": "1.0.0-alpha.2",
     "redis": "2.8.0",
     "redux": "3.6.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "2.1.0",
     "reselect": "3.0.1",
     "resize-sensor--react": "^1.0.2",
