--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "2"
 services:
   redis:
     image: redis
+    volumes:
+      - ./data:/data
   app:
     command: "yarn start"
     build:
