--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "5.0.5",
     "react-responsive": "^1.3.4",
     "react-select": "1.0.0-rc.5",
+    "react-slick": "^0.15.4",
     "react-sortable-hoc": "0.6.5",
     "react-tether": "0.5.7",
     "react-toggle-switch": "2.1.4",
@@ -66,6 +67,7 @@
     "resize-sensor--react": "^1.0.2",
     "sass-loader": "5.0.1",
     "session-file-store": "1.0.0",
+    "slick-carousel": "^1.7.1",
     "sqlite3": "3.1.8",
     "superagent": "^3.6.0",
     "tmp": "^0.0.33",
