--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-bootstrap-daterangepicker": "3.4.0",
     "react-dom": "15.6.1",
     "react-redux": "5.0.5",
+    "react-redux-toastr": "^7.1.5",
     "react-responsive": "^1.3.4",
     "react-select": "1.0.0-rc.5",
     "react-slick": "^0.15.4",
