--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "connect-redis": "3.3.0",
     "cookie-parser": "1.4.3",
     "dotenv": "4.0.0",
-    "es6-promise": "^4.1.1",
+    "es6-promise": "4.1.1",
     "eventemitter3": "2.0.3",
     "express": "4.14.0",
     "express-session": "1.14.2",
@@ -39,23 +39,23 @@
     "now-logs": "0.0.7",
     "orm": "3.2.3",
     "passport": "0.3.2",
-    "passport-local": "^1.0.0",
+    "passport-local": "1.0.0",
     "pikaday": "1.6.1",
     "postcss-easy-import": "2.0.0",
     "postcss-loader": "1.3.3",
     "postcss-middleware": "1.1.3",
     "prop-types": "15.5.7",
-    "puppeteer": "^0.10.1",
+    "puppeteer": "0.10.1",
     "raw-loader": "0.5.1",
-    "rc-tooltip": "^3.4.8",
+    "rc-tooltip": "3.4.8",
     "react": "15.6.1",
     "react-bootstrap-daterangepicker": "3.4.0",
     "react-dom": "15.6.1",
     "react-redux": "5.0.5",
-    "react-redux-toastr": "^7.1.5",
-    "react-responsive": "^1.3.4",
+    "react-redux-toastr": "7.1.5",
+    "react-responsive": "1.3.4",
     "react-select": "1.0.0-rc.5",
-    "react-slick": "^0.15.4",
+    "react-slick": "0.15.4",
     "react-sortable-hoc": "0.6.5",
     "react-tether": "0.5.7",
     "react-toggle-switch": "2.1.4",
@@ -63,16 +63,16 @@
     "recharts": "1.0.0-alpha.2",
     "redis": "2.8.0",
     "redux": "3.6.0",
-    "redux-devtools-extension": "^2.13.2",
+    "redux-devtools-extension": "2.13.2",
     "redux-thunk": "2.1.0",
     "reselect": "3.0.1",
-    "resize-sensor--react": "^1.0.2",
+    "resize-sensor--react": "1.0.2",
     "sass-loader": "5.0.1",
     "session-file-store": "1.0.0",
-    "slick-carousel": "^1.7.1",
+    "slick-carousel": "1.7.1",
     "sqlite3": "3.1.8",
-    "superagent": "^3.6.0",
-    "tmp": "^0.0.33",
+    "superagent": "3.6.0",
+    "tmp": "0.0.33",
     "uuid": "3.0.1"
   },
   "devDependencies": {
