--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "prop-types": "15.5.7",
     "puppeteer": "0.10.1",
     "raw-loader": "0.5.1",
-    "rc-tooltip": "3.4.8",
     "react": "15.6.1",
     "react-bootstrap-daterangepicker": "3.4.0",
     "react-dom": "15.6.1",
@@ -59,6 +58,7 @@
     "react-sortable-hoc": "0.6.5",
     "react-tether": "0.5.7",
     "react-toggle-switch": "2.1.4",
+    "react-tooltip": "^3.3.0",
     "react-transition-group": "1.2.0",
     "recharts": "1.0.0-alpha.2",
     "redis": "2.8.0",
