--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "autoprefixer": "6.7.6",
     "babel-core": "6.22.1",
+    "babel-plugin-add-react-displayname": "^0.0.4",
     "babel-plugin-module-resolver": "2.6.2",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-wrap-in-js": "1.1.1",
@@ -37,6 +38,7 @@
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "now-logs": "0.0.7",
+    "opbeat-react": "^3.4.0",
     "orm": "3.2.3",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
@@ -89,6 +91,6 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "8.1.x"
+    "node": "8.x.x"
   }
 }
