--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "leaflet": "1.0.2",
     "lodash": "4.17.4",
     "lusca": "1.4.1",
+    "moment": "^2.18.1",
     "next": "3.0.6",
     "next-redux-wrapper": "1.3.2",
     "next-routes": "1.0.40",
