--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kenya-dashboard",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "Kenya Dashboard",
   "author": "alba.fernandez@vizzuality.com",
   "license": "ISC",
@@ -32,14 +32,14 @@
     "leaflet": "1.0.2",
     "lodash": "4.17.4",
     "lusca": "1.4.1",
-    "moment": "^2.18.1",
+    "moment": "2.18.1",
     "next": "3.0.6",
     "next-redux-wrapper": "1.3.2",
     "next-routes": "1.0.40",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "now-logs": "0.0.7",
-    "opbeat-react": "^3.4.0",
+    "opbeat-react": "3.4.0",
     "orm": "3.2.3",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
@@ -53,6 +53,7 @@
     "react": "15.6.1",
     "react-bootstrap-daterangepicker": "3.4.0",
     "react-dom": "15.6.1",
+    "react-ga": "2.2.0",
     "react-redux": "5.0.5",
     "react-redux-toastr": "7.1.5",
     "react-responsive": "1.3.4",
