--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-select": "1.0.0-rc.5",
     "react-slick": "0.15.4",
     "react-sortable-hoc": "0.6.5",
+    "react-stickynode": "1.4.0",
     "react-tether": "0.5.7",
     "react-toggle-switch": "2.1.4",
     "react-transition-group": "1.2.0",
